fix: fixing hero and credits on mobile

--- a/components/home/ClientsSection.module.css
+++ b/components/home/ClientsSection.module.css
@@ -39,7 +39,7 @@
   width: 158px;
   height: 115px;
   flex: 0 0 auto;
-  margin-right: 36px;
+  margin-right: 28px;
   place-items: center;
   background: transparent;
   filter: grayscale(1);
